Feat - 약관 철회 및 사용자가 동의한 약관 조회 (#40)
- [DELETE] /me/terms-agreements : 약관 철회
- [GET] /me/terms-agreements : 사용자가 동의한 약관